HEAD only (unreleased)

  New Features

    - TypesTool: Improved add form for type info objects.
      Presettings can now be loaded from type info settings in setup profiles.
      This replaces the feature that did allow to load presettings from
      registered (oldstyle) fti data.

    - CMFCore.CachingPolicyManager: Caching policies can now control all the 
      Cache-Control tokens defined in the HTTP 1.1 spec (s-maxage, public, 
      private, no-transform).  When no-cache is enabled, a Pragma: no-cache 
      header is also sent for HTTP 1.0 clients. Thanks go to Geoff Davis
      for contributing the necessary patches.

    - ActionsTool: Improved add form for 'CMF Action' objects.
      Presettings can now be loaded from Action settings in setup profiles.

    - CMFSetup and GenericSetup: Added catalog tool setup handlers.
      This includes node adapters for PluginIndexes, ZCTextIndex and ZCatalog.
      Support for additional indexes can be added by providing INodeExporter
      and INodeImporter adapters. All indexes are cleared by this handler, so
      please make sure to re-catalog existing content if necessary.

    - GenericSetup.utils: Added new sub-framework for XML im- and export.
      Instead of using ConfiguratorBase configurators should now implement
      INodeExporter and INodeImporter. These node adapters should subclass
      from NodeAdapterBase and mix in ObjectManagerHelpers and / or
      PropertyManagerHelpers if needed.

    - CMFCore.exportimport:  Added framework and interfaces for exporting
      and importing content using the export / import contexts provided by
      GenericSetup.

    - CMFSetup: Split off GenericSetup.
      GenericSetup allows to use CMFSetup functionality outside CMF. See the
      README.txt of GenericSetup for details.

    - Interfaces: Converted all interfaces to zope 3 style interfaces.
      Most interfaces are bridged back to zope 2 style interfaces to provide
      backwards compatibility.
