@@ -13,8 +13,5 @@
   <type type_id="Folder">
 
   </type>
-  <type type_id="Topic">
-
-  </type>
  </bindings>
 </workflow-tool>
