@@ -2,3 +2,4 @@ Zope >= 2.8.2
 Five >= 1.2
 CMFCore
 CMFDefault
+GenericSetup
