@@ -21,6 +21,8 @@ from ZClasses import createZClassForBase
 
 from Products.CMFCore.utils import ContentInit
 from Products.CMFCore.DirectoryView import registerDirectory
+from Products.GenericSetup import EXTENSION
+from Products.GenericSetup import profile_registry
 
 import Topic
 import SimpleStringCriterion
@@ -57,3 +59,10 @@ def initialize( context ):
                , extra_constructors = (Topic.addTopic,)
                , fti = Topic.factory_type_information
                ).initialize( context )
+
+    profile_registry.registerProfile('default',
+                                     'CMFTopic',
+                                     'Adds topic portal type.',
+                                     'profiles/default',
+                                     'CMFTopic',
+                                     EXTENSION)
