@@ -1,0 +1,4 @@
+<?xml version="1.0"?>
+<types-tool>
+ <type id="Topic"/>
+</types-tool>
