@@ -1,0 +1,8 @@
+<?xml version="1.0"?>
+<workflow-tool>
+ <bindings>
+  <type type_id="Topic">
+
+  </type>
+ </bindings>
+</workflow-tool>
